<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"> 
    
<ScrollView 
android:id="@+id/ScrollView04" 
android:layout_height="fill_parent" 
android:layout_width="fill_parent"
>

<LinearLayout 
android:id="@+id/LinearLayout02" 
android:layout_height="wrap_content" 
android:layout_width="fill_parent"
android:background="@drawable/background"
android:orientation="vertical"
>

<RelativeLayout
android:id="@+id/RelativeLayout02" 
android:background="@drawable/background"
android:layout_width="fill_parent" 
android:layout_height="fill_parent">
    
<WebView 
android:id="@+id/webviewQ" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:scrollbars="vertical" 
android:layout_alignParentTop="true" 
android:layout_alignParentLeft="true"  
android:layout_alignParentRight="true"
android:layout_marginLeft="10dp"
android:layout_marginRight="10dp"
android:layout_marginTop="10dp"
/>  

<TextView
android:id="@+id/antext01"
android:layout_width="wrap_content" 
android:layout_height="25dp"
android:layout_below="@+id/webviewQ"
android:layout_alignParentLeft="true"
android:layout_marginLeft="10dp"
android:layout_marginTop="5dp"
android:text="@string/answer_text"
/>

<RadioGroup 
android:id="@+id/rgroup02"
android:layout_width="wrap_content" 
android:layout_height="35dp" 
android:orientation = "horizontal"
android:layout_below="@+id/antext01"
android:layout_marginTop="5dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="10dp"
> 

<RadioButton 
android:id="@+id/op01"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/answer_1"
android:textStyle="bold"
/> 

<RadioButton 
android:id="@+id/op02"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/answer_2"
android:textStyle="bold"
/> 

<RadioButton 
android:id="@+id/op03"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/answer_3"
android:textStyle="bold"

/> 
<RadioButton 
android:id="@+id/op04"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/answer_4"
android:textStyle="bold"
/> 

</RadioGroup>

<TextView
android:id="@+id/ratingtext01"
android:layout_width="wrap_content" 
android:layout_height="25dp"
android:layout_below="@+id/rgroup02"
android:layout_alignParentLeft="true"
android:layout_marginLeft="10dp"
android:layout_marginTop="5dp"
android:text="@string/rating_text"
/>

<RadioGroup 
android:id="@+id/rgroup03"
android:layout_width="wrap_content" 
android:layout_height="35dp" 
android:orientation = "horizontal"
android:layout_below="@+id/ratingtext01"
android:layout_alignParentLeft="true"
android:layout_marginLeft="10dp"
android:layout_marginTop="5dp"
android:visibility="gone"
> 

<RadioButton 
android:id="@+id/rt01"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/rating_1"
android:textStyle="bold"
/> 

<RadioButton 
android:id="@+id/rt02"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/rating_2"
android:textStyle="bold"
/> 

<RadioButton 
android:id="@+id/rt03"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/rating_3"
android:textStyle="bold"

/> 
<RadioButton 
android:id="@+id/rt04"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/rating_4"
android:textStyle="bold"
/> 

<RadioButton 
android:id="@+id/rt05"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="35dp" 
android:text="@string/rating_5"
android:textStyle="bold"
/> 
</RadioGroup>

<RatingBar
    android:id="@+id/ratingbarQ"
    style="?android:attr/ratingBarStyleIndicator"
    android:isIndicator="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/rgroup03"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:numStars="5"
    android:stepSize="1.0" 
/>

<Button 
android:id="@+id/resetQ"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/reset_btn"
android:layout_alignParentBottom="true"
android:layout_marginBottom="10dp"
android:layout_toLeftOf="@+id/prevQ"
android:layout_marginRight="10dp"
>
</Button>

<Button 
android:id="@+id/prevQ"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/prev_btn"
android:layout_alignParentBottom="true"
android:layout_marginBottom="10dp"
android:layout_toLeftOf="@+id/nextQ"
android:layout_marginRight="10dp"
>
</Button>

<Button 
android:id="@+id/nextQ"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/next_btn"
android:layout_below="@+id/ratingbarQ"
android:layout_alignParentBottom="true"
android:layout_alignParentRight="true"
android:layout_marginTop="15dp"
android:layout_marginBottom="10dp"
android:layout_marginRight="10dp"
>

</Button>

</RelativeLayout>
</LinearLayout>
</ScrollView>
<!--  
<ZoomControls android:id="@+id/zoomcontrols"
android:layout_width="wrap_content"
android:layout_height="wrap_content" 
android:padding="5dip" 
android:layout_margin="5dip"  
android:layout_gravity="right|bottom" />  -->
</FrameLayout> 