<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView03" 
android:layout_height="fill_parent" 
android:layout_width="fill_parent"
>

<LinearLayout 
android:id="@+id/LinearLayout01" 
android:layout_height="wrap_content" 
android:layout_width="fill_parent"
android:background="@drawable/background"
android:orientation="vertical"
>

<RelativeLayout 
android:id="@+id/RelativeLayout01" 
android:layout_height="fill_parent" 
android:layout_width="fill_parent"
android:background="@drawable/background"

>

<EditText
android:id="@+id/mkqContent"
android:layout_width="fill_parent"
android:layout_height="110dp" 
android:textColor="#000000"
android:hint="@string/q_content"
android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
android:scrollbars="vertical"  
android:gravity="top"
android:autoText="true"
android:layout_alignParentTop="true"    
android:layout_marginTop="15dp"
android:layout_alignParentLeft="true"
android:layout_alignParentRight="true"
android:layout_marginLeft="15dp"
android:layout_marginRight="15dp"
/>

<ImageButton
android:id="@+id/camera01"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_below="@+id/mkqContent"
android:layout_marginTop="40dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="15dp"
android:src="@drawable/camera"
/>

<ImageView
android:id="@+id/galleryimg01"
android:layout_width="160dp"
android:layout_height="120dp"
android:layout_toRightOf="@+id/camera01"
android:layout_marginLeft="15dp"
android:layout_below="@+id/mkqContent"
android:layout_marginTop="10dp"

/>

<EditText
android:id="@+id/op1"
android:layout_width="240dp"
android:layout_height="40dp"
android:textColor="#000000"
android:hint="@string/q_op1"
android:singleLine="true"
android:inputType="textAutoCorrect|textCapSentences"
android:layout_below="@+id/camera01"    
android:layout_marginTop="40dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="15dp"
/>

<EditText
android:id="@+id/op2"
android:layout_width="240dp"
android:layout_height="40dp"
android:textColor="#000000"
android:hint="@string/q_op2"
android:inputType="textAutoCorrect|textCapSentences"
android:singleLine="true"
android:layout_below="@+id/op1"    
android:layout_marginTop="10dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="15dp"
/>
<EditText
android:id="@+id/op3"
android:layout_width="240dp"
android:layout_height="40dp"
android:textColor="#000000"
android:hint="@string/q_op3"
android:layout_x="15dp"
android:layout_y="340dp"
android:singleLine="true"
android:inputType="textAutoCorrect|textCapSentences"
android:layout_below="@+id/op2"    
android:layout_marginTop="10dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="15dp"
/>
<EditText
android:id="@+id/op4"
android:layout_width="240dp"
android:layout_height="40dp"
android:textColor="#000000"
android:hint="@string/q_op4"
android:singleLine="true"
android:inputType="textAutoCorrect|textCapSentences"
android:layout_below="@+id/op3"    
android:layout_marginTop="10dp"
android:layout_alignParentLeft="true"
android:layout_marginLeft="15dp"
/>

<RadioGroup 
android:id="@+id/rgroup04"
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:orientation="vertical"
android:layout_below="@+id/camera01"
android:layout_marginTop="40dp"
android:layout_toRightOf="@+id/op1"
android:layout_marginLeft="10dp"
> 

<RadioButton 
android:id="@+id/rightan01"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="wrap_content" 
android:layout_toRightOf="@+id/op1"
android:layout_marginLeft="10dp"

/> 
<RadioButton 
android:id="@+id/rightan02"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="wrap_content" 
android:layout_toRightOf="@+id/op2"
android:layout_marginLeft="10dp"

/> 
<RadioButton 
android:id="@+id/rightan03"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="wrap_content" 
android:layout_toRightOf="@+id/op3"
android:layout_marginLeft="10dp"

/> 
<RadioButton 
android:id="@+id/rightan04"
android:checked="false" 
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_toRightOf="@+id/op4"
android:layout_marginLeft="10dp"

/> 
</RadioGroup>

<Button
android:id="@+id/preview01"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/preview_btn"
android:textColor="#151B54"
android:layout_below="@+id/op4"    
android:layout_marginTop="15dp"
android:layout_toLeftOf="@+id/post01"
android:layout_marginLeft="15dp"
/>
<Button
android:id="@+id/post01"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/post_btn"
android:textColor="#151B54"
android:layout_below="@+id/op4"    
android:layout_marginTop="15dp"
android:layout_alignParentRight="true"
android:layout_marginRight="15dp"


/>

</RelativeLayout>
</LinearLayout>
</ScrollView>


